# HardwareDescriptionFileGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmsis_svd_schema.xml
cmake/: hdfg_generate_device.cmake  hdfg_generate_targets_for_directory.cmake  hdfg_parse_device_name.cmake
src/: setup.py  test.py
src/svd_parser/: format_utils.py  parse_device.py  parser_utils.py  setup.py  validate_schema.py
src/svd_parser/templates/: io.hpp.template  peripheral.hpp.template
templates/: io.hpp.template  peripheral.hpp.template
test/: CMakeLists.txt  glom_all_headers.py  test_headers.cpp
test/templates/: test_headers.cpp.template  test_headers.hpp.template
